# KandyIO

./: CMakeCache.txt  CMakeLists.txt  KandyClient  KendyClient  Makefile  README.md  cmake_install.cmake  httpClient.cpp  httpClient.h  kandyAccount.cpp  kandyAccount.h  kandyClient.cpp  kandyClient.h  kandyDomain.cpp  kandyDomain.h  kendyClient.cpp  kendyClient.h  main.cpp
